--- a/umka/src/main/resources/application.properties
+++ b/umka/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=9216
+server.servlet.context-path=/umka
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=webapp
+spring.datasource.username=alex
+spring.datasource.password=1234
