--- a/umka/src/main/resources/application.properties
+++ b/umka/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialec
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=webapp
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=umka
 spring.datasource.username=alex
 spring.datasource.password=1234
